--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
-    "cezerin2-client": "^0.34.0",
+    "cezerin2-client": "^0.35.0-beta.1",
     "chart.js": "^2.7.2",
     "clean-webpack-plugin": "^0.1.19",
     "concurrently": "^4.0.1",
@@ -83,6 +83,7 @@
     "handlebars": "^4.0.11",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
+    "i": "^0.3.6",
     "jsonwebtoken": "^8.3.0",
     "lint-staged": "^7.2.2",
     "lodash": "^4.17.10",
@@ -91,7 +92,7 @@
     "mini-css-extract-plugin": "^0.4.2",
     "moment": "^2.22.2",
     "node-fetch": "^2.2.0",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.14.2",
     "prop-types": "^15.6.2",
